Fixed huge spacing for chat messages on MinimalCord

--- a/MinimalCord/base.css
+++ b/MinimalCord/base.css
@@ -579,7 +579,7 @@
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y {
   background: var(--message-box);
   margin: 0 10px 0 20px;
-  padding: 0 20px 0 74px;
+  padding: 0 20px 0 9px;
 }
 #app-mount .chat-3bRxxu .messagesWrapper-3lZDfY .cozyMessage-3V1Y8y .wrapper-2aW0bm {
   background: var(--foreground-1);
