--- a/MinimalCord/src/general/_chat.scss
+++ b/MinimalCord/src/general/_chat.scss
@@ -113,7 +113,7 @@
     .cozyMessage-3V1Y8y {
       background: var(--message-box);
       margin: 0 10px 0 20px;
-      padding: 0 20px 0 74px;
+      padding: 0 20px 0 9px;
 
       .wrapper-2aW0bm {
         background: var(--foreground-1);
